[package]
name = "s2-verification"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
eyre = "0.6.12"
s2-sdk = ">=0.23.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
serde_json = "1.0.149"
antithesis_sdk = "0.2.8"
# required for antithesis_sdk rand compatibility
# needs to be 0.8 till it upgrades
rand = "0.10.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
