[package]
name = "s2-verification"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
s2-sdk = "0.27.1"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
serde_json = "1.0.149"
antithesis_sdk = { git = "https://github.com/antithesishq/antithesis-sdk-rust", rev = "6829a946e7e970cc743ffe17c3cee7d2bc25425a", default-features = false, features = ["full", "rand_v0_10"] }
rand = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
