[package]
name = "s2-verification"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
antithesis_sdk = "0.2.8"
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.32"
# required for antithesis_sdk rand compatibility
# needs to be 0.8 till it upgrades
rand = "0.8"
s2-sdk = ">=0.29, <1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
